flux/tabby/tabby.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tabby
  namespace: tabby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tabby
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tabby
    spec:
      tolerations:
      - key: dedicated
        operator: "Exists"
        effect: "NoSchedule"
      nodeSelector:
        dedicated: highPerf
      containers:
        - args:
            - serve
            - --model
            - StarCoder-1B
          command:
            - /opt/tabby/bin/tabby-cpu
          image: tabbyml/tabby
          name: tabby
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: tabby-volume
      restartPolicy: Always
      volumes:
        - name: tabby-volume
          persistentVolumeClaim:
            claimName: tabby-pvc
