flux/tabby/tabby.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tabby
  namespace: tabby
spec:
  type: NodePort
  selector:
    app: tabby
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 30001
